--- a/index.html
+++ b/index.html
@@ -75,17 +75,17 @@
                     <ul class="social-links">
                         <li>
                             <a href="#" title="Siga-nos no Instagram">
-                                <img src="./Imagens/Instagram.png" alt="Logo do Instagram" />
+                                <img src="./Imagens/instagram.png" alt="Logo do Instagram" />
                             </a>
                         </li>
                         <li>
                             <a href="#" title="Siga-nos no Facebook">
-                                <img src="./Imagens/Facebook.png" alt="Logo do Facebook" />
+                                <img src="./Imagens/facebook.png" alt="Logo do Facebook" />
                             </a>
                         </li>
                         <li>
                             <a href="#" title="Visite nosso canal no YouTube">
-                                <img src="./Imagens/YouTube.png" alt="Logo do YouTube">
+                                <img src="./Imagens/youtube.png" alt="Logo do YouTube">
                             </a>
                         </li>
                     </ul>
