coreção de pontuação

--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
 
                 <ul class="brands-list">
                     <li><img src="./Imagens/nintendo.png" alt="nintendo" /></li>
-                    <li><img src="/Imagens/xbox.png" alt="Xbox" /></li>
-                    <li><img src="/Imagens/playstation.png" alt="playstation" /></li>
+                    <li><img src="./Imagens/xbox.png" alt="Xbox" /></li>
+                    <li><img src="./Imagens/playstation.png" alt="playstation" /></li>
 
                 </ul>
             </div>
