--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <!--Seção sobre a loja-->
     <section id="about">
         <div class="container">
-            <img class="store-front" src="./imagens/loja.png" alt="Fachada da loja Games Shop" />
+            <img class="store-front" src="./Imagens/loja.png" alt="Fachada da loja Games Shop" />
             <div>
                 <h2>Sobre a Loja</h2>
                 <p>
